--- a/index.Rmd
+++ b/index.Rmd
@@ -44,7 +44,7 @@ library(rsconnect)
  
 bookdown::render_book("index.Rmd")
 
-bookdown::render_book()
+#bookdown::render_book()
 
 #  # view locally
 #  render_book("index.Rmd")
